apps/bgd/overlays/kokyaku/kokyaku-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kokyaku
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
