apps/bgd/overlays/kokyaku/kokyaku-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kokyaku
  name: kokyaku
  namespace: kokyaku
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: kokyaku
---
