apps/bgd/overlays/kokyaku/kokyaku-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: kokyaku
  name: kokyaku
  namespace: bgd
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: kokyaku
    weight: 100
